<resources>
    <string name="app_name">To-Do List</string>
    <string name="onboard_screen">OnBoard Screen</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_task">Add Task</string>
    <string name="choose_category">Choose Category</string>
    <string name="select">Select</string>
    <string name="home">Home</string>
    <string name="music">Music</string>
    <string name="study">Study</string>
    <string name="design">Design</string>
    <string name="sport">Sport</string>
    <string name="work">Work</string>
    <string name="grocery">Grocery</string>
    <string name="health">Health</string>
    <string name="social">Social</string>
    <string name="high">High</string>
    <string name="save">Save</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="effortlessly_manage_your_tasks_and_conquer_your_day">Effortlessly manage your tasks and conquer your day</string>
    <string name="tagline">Boost your productivity!\nAdd tasks now</string>
    <string name="email">Email</string>
    <string name="your_name">Your Name</string>
    <string name="allow_edit_of_lists">Allow edit of lists:</string>
    <string name="update_settings">Update Settings</string>
    <string name="task_time">Task Time</string>
    <string name="date">May 2,2012</string>
    <string name="category">Category</string>
    <string name="priority">Priority</string>
    <string name="delete_task">Delete Task</string>
    <string name="no_task_found">No task found</string>
    <string name="due_date">Due Date</string>
    <string name="feedback">Feedback</string>
    <string name="versio">v 1.0.0</string>
    <string name="create_task">Create Task</string>
    <string name="show_reminder">Show Reminder</string>
</resources>